fix style merge issues and divider visibility

--- a/app/component/routepage/route.scss
+++ b/app/component/routepage/route.scss
@@ -347,7 +347,7 @@ nav.top-bar .title .route-number {
     h1 {
       font-size: 26px;
       font-weight: $font-weight-medium;
-      font-family: $heading-font-family;
+      font-family: $font-family;
     }
   }
 }
